Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2325

Code completion gives obsolete methods without warning.

XMLWordPrintable

    • 0fa349237d (qt-creator/qt-creator/8.0) 0fa349237d (qt-creator/qt-creator/master) 0fa349237d (qt-creator/tqtc-qt-creator/8.0)

      C++ code completion suggests obsoleted members for Qt classes, and there is no warning of any kind. This easily leads to using obsoleted APIs.

      Code completion should not suggest obsoleted members at all, or at least it should mark obsolete members in the code completion popup clearly and put them last in the list. Additionally syntax highlighting could highlight using obsolete APIs with a warning underline, similar to syntax errors and unused local variables.

      I'm reporting this as a bug instead of a suggestion, because when the principal IDE for Qt guides programmers to use obsolete Qt features, it qualifies as a bug in my opinion.

        For Gerrit Dashboard: QTCREATORBUG-2325
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            ari.hyttinen Ari Hyttinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes